--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -76,7 +76,7 @@ footer.footer
 						li
 							a(href="whitening.html") Отбеливание зубов
 						li
-							a(href="surgery.html") Ортодонтия
+							a(href="protezirovanie.html") Ортодонтия
 						li
 							a(href="surgery.html") Хирургия
 						li
