--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -39,7 +39,7 @@ header.header
 							p пн-вс: 9:00 — 21:00
 						
 					.header-contacts.flex
-						a(href="#!").btn Позвонить
+						a(href="tel:+79999999999").btn Позвонить
 						
 						.social-block
 							a(href="#!").social-link
