--- a/src/pug/sections/_service-page-content.pug
+++ b/src/pug/sections/_service-page-content.pug
@@ -39,7 +39,7 @@ section.service.pt-20
 				
 				.service-content__column
 					+servCard(7, 'Терапия','Все виды лечения при зубных болях и незначительных повреждениях зубов.', 'therapy.html')
-					+servCard(8, 'Ортопедия', 'Все виды протезирования зубов - коронками, винирами, съемное и т.д.','orthopedics.html')
+					+servCard(8, 'Ортопедия', 'Все виды протезирования зубов - коронками, винирами, съемное и т.д.','protezirovanie.html')
 					+servCard(9, 'Ортодонтия', 'Исправление прикуса брекетами, каппами и пластинками.','surgery.html')
 					+servCard(10, 'Гигиена', 'Профилактическая стоматология и отбеливание зубов','hygiene.html')
 					+servCard(11, 'Отбеливание ', 'Профилактическая стоматология и отбеливание зубов','whitening.html')
