--- a/src/pug/sections/_steps-working.pug
+++ b/src/pug/sections/_steps-working.pug
@@ -13,7 +13,7 @@ section.steps.working-steps
 				.swiper-slide.step-card.step-card--work
 					.step-card__top.flex
 						span.step__num 01
-						span.step-card__name Диагностика
+						
 					.step__img
 						img(src='./img/steps/1.webp', srcset='./img/steps/1@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
 					.step__title Сбор анамнеза
@@ -23,38 +23,43 @@ section.steps.working-steps
 				.swiper-slide.step-card.step-card--work
 					.step-card__top.flex
 						span.step__num 02
-						span.step-card__name Диагностика
+						
 					.step__img
 						img(src='./img/steps/2.webp', srcset='./img/steps/2@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
-					.step__title Отбеливание
+					.step__title Осмотр
 					.step__desk
 						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				
 				.swiper-slide.step-card.step-card--work
 					.step-card__top.flex
 						span.step__num 03
-						span.step-card__name Диагностика
+						
 					.step__img
 						img(src='./img/steps/3.webp', srcset='./img/steps/3@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
-					.step__title Реминерализация эмали
+					
+					.step__title Фотопротокол
 					.step__desk
 						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				
 				.swiper-slide.step-card.step-card--work
 					.step-card__top.flex
 						span.step__num 04
-						span.step-card__name Диагностика
+						
 					.step__img
 						img(src='./img/steps/4.webp', srcset='./img/steps/4@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
+					
+					.step__title Компьютерная томография
 					.step__desk
 						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				
 				.swiper-slide.step-card.step-card--work
 					.step-card__top.flex
 						span.step__num 05
-						span.step-card__name Диагностика
+						
 					.step__img
 						img(src='./img/steps/5.webp', srcset='./img/steps/5@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
+					
+					.step__title Составление плана лечение
 					.step__desk
 						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 			
