--- a/src/pug/sections/_header-main-page.pug
+++ b/src/pug/sections/_header-main-page.pug
@@ -40,7 +40,7 @@ header.header.header--primary
 							p пн-вс: 9:00 — 21:00
 						
 					.header-contacts.flex
-						a(href="#!").btn Позвонить
+						a(href="tel:+79999999999").btn Позвонить
 						
 						.social-block
 							a(href="#!").social-link
