--- a/src/scss/sections/_promo-special.scss
+++ b/src/scss/sections/_promo-special.scss
@@ -261,28 +261,31 @@
 	}
 }
 .rotate-image__group.image-count-1{
-	right: 885px;
+	right: 955px;
+	transform: translate(2%, 60%) rotate(15.5deg);
 	.rotate-image1{
-		width: 288px;
-		height: 330px;
-		transform: translate(2%, 60%) rotate(15.5deg);
+		width: 225px;
+		height: 280px;
+		transform: rotate(0);
+		
 		top:auto!important;
 		left: auto!important;
 	}
 	@media (max-width: 1919px) {
-		right: remy(885);
+		right: remy(955);
 		.rotate-image1{
-			width: remy(288);
-			height: remy(330);
+			width: remy(225);
+			height: remy(280);
 			
 		}
 		@media (max-width: 767px) {
 		   
-		   .rotate-image1{transform: translate(57%, 15%) rotate(15.5deg);}
+		//    .rotate-image1{transform: translate(57%, 15%) rotate(15.5deg);}
 		}
 	}
 	@media (max-width: 767px) {
 	 right: auto;height: 210px;
-	 .rotate-image1{transform: translate(57%, 12%) rotate(15.5deg);}
+	 transform: translate(0, 0) rotate(0deg);
+	.rotate-image1{transform: translate(57%, 12%) rotate(15.5deg);}
 	}
 }
