--- a/src/scss/sections/_promo-main.scss
+++ b/src/scss/sections/_promo-main.scss
@@ -205,7 +205,7 @@
 			}
 			p{
 				padding-block:20px;
-				// background-color: $pr;
+				white-space: nowrap;
 				position: relative;
 				z-index: 2;
 				width: fit-content;
