--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -13,7 +13,8 @@
 	column-gap:12px;
 	white-space: nowrap;
 	font-family: var(--font-family);
-	font-weight: 600;
+	// font-weight: 600;
+	font-weight: 500;
 	font-size: 20px;
 	.svg-rarr{color: white;}
 	@media (max-width: 1919px) {
