--- a/src/pug/sections/_cta.pug
+++ b/src/pug/sections/_cta.pug
@@ -6,7 +6,7 @@ section.cta
 	.container
 		.cta-content
 			.siple-txt-top
-				p Заботясь о здоровье зубов наших пациентов, мы не просто лечим — мы возвращаем уверенность и улыбки в их жизни.
+				p Заботясь о здоровье зубов наших пациентов, мы не просто лечим — мы возвращаем уверенность и&nbsp;улыбки в их жизни.
 			
 			.cta-top.cta-big-txt
 				p #[span.quote-dark] Мы#[br.hide-sm] создаем #[br.visible-sm] #[span.gogol-text улыбки]
