--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -17,7 +17,7 @@ section.team
 			//LEFT COLUMN
 			.team-preview__col
 				.blockquote-box
-					p Заботясь о здоровье зубов наших пациентов, мы не просто лечим — мы возвращаем уверенность и улыбки в их жизни. Каждый день — это новая возможность сделать мир вокруг лучше!
+					p Заботясь о здоровье зубов наших пациентов, мы не просто лечим — мы&nbsp;возвращаем уверенность и улыбки в&nbsp;их&nbsp;жизни. Каждый день — это новая возможность сделать мир вокруг лучше!
 						span.quote-left
 						span.quote-right
 					.blockquote-box__bottom
