--- a/src/pug/sections/_promo.pug
+++ b/src/pug/sections/_promo.pug
@@ -11,7 +11,7 @@
 				.promo-title__head
 				
 					h1.h1 Всё на 4-х<br>(All-on-4)
-					p.promo-subtitle Вся хирургическая часть с установкой имплантатов и мультиюнитов
+					p.promo-subtitle Вся хирургическая часть с&nbsp;установкой<br>имплантатов и&nbsp;мультиюнитов
 				//картинка на mob экранах
 				.promo-img.promo-img--mob
 					img.cover-img(src="./img/img.webp", width="823" height="663" alt="img")
