--- a/src/pug/sections/_review-section.pug
+++ b/src/pug/sections/_review-section.pug
@@ -11,7 +11,7 @@ section.review
 		
 		.review__content.flex
 			.review__content-txt
-				.title-26 Только настоящие отзывы о нашей стоматологии
+				.title-26 Только настоящие отзывы о&nbsp;нашей стоматологии
 				.rotate-image
 					img.cover-img(src='./img/rotate/4.webp'  width='320' height='354' loading='lazy' alt='img')
 					.gogol-text
