--- a/src/pug/sections/_testimonial.pug
+++ b/src/pug/sections/_testimonial.pug
@@ -26,7 +26,7 @@ section.testimonial.has-absBtn
 								span Преподаватель музыки
 							
 							.testimonial-card__txt
-								p Мне понравился главный врач стоматологии "Нью Лайн Дент", мне понравилось его отношения с молодыми коллегами к пациенту. Здесь мне решили проблемы, которые не смогли решить в другой стоматологии. В будущем я могу расчитывать на эту клинику. Именно того, что мне предложил Карен Овсепович мне никто не предлагал.
+								p Мне понравился главный врач стоматологии "Нью Лайн Дент", мне понравилось его отношения с молодыми коллегами к пациенту. Здесь мне решили проблемы, которые не&nbsp;смогли решить в другой стоматологии. В&nbsp;будущем я могу расчитывать на эту клинику. Именно того, что мне предложил Карен Овсепович мне никто не предлагал.
 							
 							.rating-block
 								span.rating-star
