--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -17,7 +17,9 @@ html(lang="ru")
 		//- link(rel='stylesheet' href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
 		//Swiper
 		link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css")
-		
+		link(rel='preconnect' href='https://fonts.googleapis.com')
+		link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin)
+		link(href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap' rel='stylesheet')
 		//========= custom styles ========
 		link(rel="stylesheet"  href="./css/main.css")
 		title !{title}
