--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -159,7 +159,7 @@
 	p{
 		font-weight: 400;
 		font-size: 16px;
-		line-height: 150%;
+		line-height: 24px;
 		color: #2e3033;
 		max-width: 980px;
 	}
