--- a/src/scss/sections/_accordion.scss
+++ b/src/scss/sections/_accordion.scss
@@ -20,7 +20,7 @@
 	padding-right: 30px;
 	position: relative;
 	margin-top: 10px;
-	border-top: 1px solid #b9b1a6;
+	// border-top: 1px solid #b9b1a6;
 	&.open{border-bottom: 0;}
 	@media (max-width: 1919px) {
 		font-size: remy(20);
