--- a/src/scss/sections/_faq.scss
+++ b/src/scss/sections/_faq.scss
@@ -1,5 +1,6 @@
 @use "../base/var" as *;
 .faq-acordion{
 	margin-top: 40px;
+	.accordion-header{border-top: 1px solid #b9b1a6;}
 }
 .faq .container-special{border-bottom: 0;}
