--- a/src/pug/pages/doctors.pug
+++ b/src/pug/pages/doctors.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-	include ../sections/_header-main-page
+	include ../sections/_header
 	main.main
 		include ../sections/doctors/_promo.pug
 		include ../sections/doctors/_content.pug
