--- a/src/pug/sections/doctors/_content.pug
+++ b/src/pug/sections/doctors/_content.pug
@@ -13,8 +13,8 @@ mixin doctorCrad(img, name,txt, num)
 						li
 							span Должность:
 							p #{txt}
-						li
-							span Стаж
+						li.exper-item
+							span Стаж:
 							p #{num} лет
 					.accordion-group
 						.accordion-header
@@ -118,8 +118,8 @@ section.doctors.pb-110
 								li
 									span Должность:
 									p Стоматолог - хирург, имплантолог, пародонтолог
-								li
-									span Стаж
+								li.exper-item
+									span Стаж:
 									p 7 лет
 							.accordion-group
 								.accordion-header
