--- a/src/scss/sections/_implantation.scss
+++ b/src/scss/sections/_implantation.scss
@@ -30,7 +30,7 @@
 	@media (max-width: 767px) {
 		grid-template-columns: 1fr;
 		column-gap:20px;
-		.doctor-card__img{height:remy2(212)}
+		.doctor-card__img{height:212px;}
 		.doctor-card__profile{padding-top: 0;}
 		.doctor-card__profile .doctor-card__list p{font-size: 14px;}
 		.doctor-card__profile .title-26{font-size: 18px;}
