--- a/src/scss/sections/_inner-promo.scss
+++ b/src/scss/sections/_inner-promo.scss
@@ -277,6 +277,7 @@
 		&>*+*{margin-top: 40px;}
 		.txt-16{
 			max-width: 980px;
+			line-height: 24px;
 		}
 		@media (max-width: 1919px) {
 			padding-top: remy(40);
