--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -47,7 +47,7 @@
 							button.btn-primary(type="submit" disabled)
 								span Отправить
 								
-							p.agree-txt Нажимая на кнопку «Отправить», я даю согласие на обработку персональных данных
+							p.agree-txt Нажимая на кнопку «Отправить», я даю согласие на&nbsp;обработку персональных данных
 			
 			//RIGHT COLUMN
 			.promo-contacts-image.hide-sm
