--- a/src/pug/sections/_promo.pug
+++ b/src/pug/sections/_promo.pug
@@ -1,12 +1,14 @@
 .promo.promo-main
 	.promo-top
 		.container.pl-110
-			.left-decore-line
-				span.decore-line__top
-				p наши услуги
-				span.decore-line__bottom
-					svg.svg-arDown
-						use(href='./img/sprite.svg#svg-arDown')
+			.promo-decore-line
+				img(src='./img/promo-decore-left.webp' width='22' height='563' loading='lazy' alt='img')
+			//- .left-decore-line
+			//- 	span.decore-line__top
+			//- 	p наши услуги
+			//- 	span.decore-line__bottom
+			//- 		svg.svg-arDown
+			//- 			use(href='./img/sprite.svg#svg-arDown')
 			.promo-title__content
 				.promo-title__head
 				
