--- a/src/pug/sections/blog/_blog-content.pug
+++ b/src/pug/sections/blog/_blog-content.pug
@@ -71,7 +71,7 @@ section.blog-content
 										span Оставить заявку 
 										svg.svg-rarr
 											use(href='./img/sprite.svg#svg-rarr')
-									p.agree-txt Нажимая на кнопку «Отправить», я даю согласие на обработку персональных данных
+									p.agree-txt Нажимая на кнопку «Отправить», я даю согласие на&nbsp;обработку персональных данных
 					.blog-cards-wrapper
 						//CARDS
 						+blogCard
