--- a/src/pug/sections/doctors/_content.pug
+++ b/src/pug/sections/doctors/_content.pug
@@ -185,10 +185,10 @@ section.doctors.pb-110
 						p Выпускница ПСПбгму им. акад. И. А. Павлова 2020 год Стоматологический факультет
 					li 
 						p Ординатура:
-						p СЗГМУ им . И. И. Мечникова Кафедра стоматологии общей практики
+						p СЗГМУ им.&nbsp;И.&nbsp;И.&nbsp;Мечникова Кафедра стоматологии общей практики
 			//Card
 			+doctorCrad(2,'Чермен Олегович Дегоев','Стоматолог – терапевт, эндодонтист', 9)
-				p Окончил «Северо-Осетинский государственный медицинский университет им. Коста Левановича Хетагурова» . Прошел профессиональную подготовку в Северо-Западном государственном медицинском университете имени И. И. Мечникова
+				p Окончил «Северо-Осетинский государственный медицинский университет им. Коста Левановича Хетагурова» . Прошел профессиональную подготовку в Северо-Западном государственном медицинском университете имени&nbsp;И.&nbsp;И.&nbsp;Мечникова
 
 		.feedback__content.flex
 			.feedback__txt
@@ -221,7 +221,7 @@ section.doctors.pb-110
 							span Оставить заявку 
 							svg.svg-rarr
 								use(href='./img/sprite.svg#svg-rarr')
-						p.agree-txt Нажимая на кнопку «Отправить», я даю согласие на обработку персональных данных
+						p.agree-txt Нажимая на кнопку «Отправить», я даю согласие на&nbsp;обработку персональных данных
 
 		.doctors-wrapper
 			//Card
@@ -232,8 +232,8 @@ section.doctors.pb-110
 						p Выпускница ПСПбгму им. акад. И. А. Павлова 2020 год Стоматологический факультет
 					li 
 						p Ординатура:
-						p СЗГМУ им . И. И. Мечникова Кафедра стоматологии общей практики
+						p СЗГМУ им&nbsp;И.&nbsp;И.&nbsp;Мечникова Кафедра стоматологии общей практики
 			
 			//Card
 			+doctorCrad(2,'Чермен Олегович Дегоев','Стоматолог – терапевт, эндодонтист', 9)
-				p Окончил «Северо-Осетинский государственный медицинский университет им. Коста Левановича Хетагурова» . Прошел профессиональную подготовку в Северо-Западном государственном медицинском университете имени И. И. Мечникова
+				p Окончил «Северо-Осетинский государственный медицинский университет им. Коста Левановича Хетагурова» . Прошел профессиональную подготовку в Северо-Западном государственном медицинском университете имени&nbsp;И.&nbsp;И.&nbsp;Мечникова
