--- a/src/pug/sections/implantation/_promo.pug
+++ b/src/pug/sections/implantation/_promo.pug
@@ -19,7 +19,7 @@
 						p Помогаем в сложных случаях
 						
 					.text-card
-						p.txt-primary Ближайшее время для записи на консультацию
+						p.txt-primary Ближайшее время для записи на&nbsp;консультацию
 						p Курская
 						p Завтра, 02 декабря, в 12:30
 							
