--- a/src/pug/sections/promos/_promo-surgery.pug
+++ b/src/pug/sections/promos/_promo-surgery.pug
@@ -20,7 +20,7 @@
 						p Удаление в день обращения
 						
 					.text-card
-						p.txt-primary Ближайшее время для записи на консультацию
+						p.txt-primary Ближайшее время для записи на&nbsp;консультацию
 						p Курская
 						p Завтра, 02 декабря, в 12:30
 							
