--- a/src/pug/sections/promos/_promo-whitening.pug
+++ b/src/pug/sections/promos/_promo-whitening.pug
@@ -13,14 +13,14 @@
 		.container
 			.promo-special-grid
 				.promo-special-text
-					h1.title-36 Эффективное и безопасное отбеливание зубов
+					h1.title-36 Эффективное и&nbsp;безопасное отбеливание зубов
 					.promo-subtitle
 						p Эффективное отбеливание до 8 тонов за 1 сеанс
 						p Безопасно для эмали и мягких тканей
 						p Безболезненная процедура
 						
 					.text-card
-						p.txt-primary Ближайшее время для записи на консультацию
+						p.txt-primary Ближайшее время для записи на&nbsp;консультацию
 						p Курская
 						p Завтра, 02 декабря, в 12:30
 							
@@ -46,7 +46,7 @@
 						.product-card__top
 							.flex
 								.product-card__img
-									img(src='../img/service/serv12.svg'  width='70' height='72' loading='lazy' alt='img')
+									img(src='./img/service/serv12.svg'  width='70' height='72' loading='lazy' alt='img')
 								.product-card__col
 									.product-card__title Отбеливание Opalescence
 									.time-element 30 минут 
@@ -62,7 +62,7 @@
 							
 
 					.bonus-card.flex
-						img(src='../img/service/serv10.svg'  width='70' height='73' loading='lazy' alt='img')
+						img(src='./img/service/serv10.svg'  width='70' height='73' loading='lazy' alt='img')
 						.product-card__title В подарок идет зубной набор 
 						
 	//bottom row
