--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -77,7 +77,7 @@ html(lang="ru")
 
 				br
 				.text-card
-					p.txt-primary Ближайшее время для записи на консультацию
+					p.txt-primary Ближайшее время для записи на&nbsp;консультацию
 					p Курская
 					p Завтра, 02 декабря, в 12:30
 				
