--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -67,6 +67,7 @@
 .btn-accent{
 	background-color: #B9B1A6;
 	color: #fff;
+	font-weight: 600;
 	&:hover{
 		color: #fff;
 		background-color: #aca396;
