--- a/src/scss/sections/_implantation.scss
+++ b/src/scss/sections/_implantation.scss
@@ -115,6 +115,11 @@
 		padding: 10px 20px;
 	}
 }
+.doctor-card__profile-group .video-slim-btn{
+	padding-left: 36px;
+	padding-right: 11px;
+	column-gap:24px;
+}
 .doctor-card.doctor-card--short  .doctor-card__list li {
 	span{
 		font-weight: 500;
