--- a/src/scss/sections/_service-page.scss
+++ b/src/scss/sections/_service-page.scss
@@ -99,7 +99,7 @@
 			width: 17px;
 			height: 17px;
 			background-size: contain;
-			background-position: center;
+			background-position: center -1px;
 			background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='17' height='10' viewBox='0 0 17 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M8.37718 6.92981L15.8816 0.0739394L17 1.07048L8.37718 9.07227L0 1.07053L1.11842 0.0722656L8.37718 6.92981Z' fill='%23B9B1A6' /%3e%3c/svg%3e");
 		}
 		@media (max-width: 1919px) {
