--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -9,7 +9,7 @@ block content
 		include ../sections/_cta.pug
 		include ../sections/_about
 		include ../sections/_steps
-		include ../sections/_feedback
+		include ../sections/_feedback-border-bottom
 		include ../sections/_review-section
 		include ../sections/_testimonial
 		include ../sections/_faq
