--- a/src/pug/sections/promos/_promo-3d.pug
+++ b/src/pug/sections/promos/_promo-3d.pug
@@ -20,7 +20,7 @@
 						p Используем все виды материалов и конструкций
 						
 					.text-card
-						p.txt-primary Ближайшее время для записи на консультацию
+						p.txt-primary Ближайшее время для записи на&nbsp;консультацию
 						p Курская
 						p Завтра, 02 декабря, в 12:30
 							
@@ -53,7 +53,7 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title 3D Компьютерная томография (1 челюсть)
+									.product-card__title 3D Компьютерная томография (1&nbsp;челюсть)
 									
 							.time-element 30 минут 
 							.time-element 30 минут 
@@ -67,7 +67,7 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title 3D Компьютерная томография (2 челюсти)
+									.product-card__title 3D Компьютерная томография (2&nbsp;челюсти)
 									
 							.time-element 30 минут 
 							.time-element 30 минут 
@@ -81,7 +81,7 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title 3D Компьютерная томография (2 челюсти+ гайморовы пазухи)
+									.product-card__title 3D Компьютерная томография (2&nbsp;челюсти+ гайморовы пазухи)
 									
 							.time-element 30 минут 
 							.time-element 30 минут 
