--- a/src/scss/sections/_feedback.scss
+++ b/src/scss/sections/_feedback.scss
@@ -1,4 +1,10 @@
 @use "../base/var" as *;
+.feedback.feedback-bb{
+	border-bottom: 1px solid #b9b1a6;
+	@media (max-width: 767px) {
+		border-bottom: 0;
+	}
+}
 .feedback__content{
 	padding-bottom: 80px;
 	.social-link {
@@ -12,16 +18,26 @@
 	}
 	.form-item input{
 		padding-left: 35px;
-		
 	}
-	.fake-placeholder{left: 35px;}
+	.form-item .fake-placeholder{
+		left: 35px;
+		font-weight: 300;
+		font-size: 16px;
+		top:17px;
+	}
 	@media (max-width: 1919px) {
 		padding-bottom:remy(80);
-		form-item input{
+		.form-item input{
 			padding-left:remy(35);
 			
+			
 		}
-		.fake-placeholder{left: remy(35);}
+		.form-item .fake-placeholder{
+			left: remy(35);
+			top:remy(17);
+			font-size: remy(16);
+			
+		}
 	}
 	@media (max-width: 767px) {
 		padding-bottom:40px;
@@ -30,7 +46,7 @@
 			padding-left: 35px;
 			
 		}
-		.fake-placeholder{left: 35px;}
+		.fake-placeholder{left: 35px;top:17px;font-size: 16px;}
 	}
 }
 .feedback__content{
