--- a/src/scss/sections/_promo-main.scss
+++ b/src/scss/sections/_promo-main.scss
@@ -84,7 +84,7 @@
 		position: absolute;
 		top: 0;
 		bottom: 0;
-		left: 70px;
+		left: 90px;
 		z-index: 5;
 		.h1, h1, p{
 			color: white;
@@ -93,7 +93,7 @@
 			
 			padding-top: remy(80);
 			padding-bottom: remy(80);
-			left: remy(70);
+			left: remy(90);
 		}
 		@media (max-width: 767px) {
 			position: relative;
@@ -110,7 +110,7 @@
 		.h1, h1{margin-bottom: 0.5em; text-transform: uppercase;}
 		.promo-subtitle{
 			font-weight: 400;
-			font-size: 24px;
+			font-size: 1.5rem;
 			line-height: 108%;
 			letter-spacing: -0.08em;
 			color: #fff;
@@ -230,3 +230,23 @@
 	
 }
 .promo.promo-main{background-color: $pr;}
+.promo-decore-line{
+	position: absolute;
+	left: 0;
+	top: 30px;
+	width: 22px;
+	height: 563px;
+	img{
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+	}
+	@media (max-width: 1919px) {
+		top: remy(30);
+		width: remy(22);
+		height: remy(563);
+	}
+	@media (max-width: 767px) {
+	display: none;
+	}
+}
